<resources>
    <string name="nmedia">Nmedia!</string>

    <string name="app_name">nmedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_more">more vert</string>
    <string name="description_like_visibility_share">favorite likes visibility share</string>
    <string name="some_name">"Привет, это новая нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам от новичков до уверенных профессионалов. Но самое важное остается с нами: мы верим что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен -> http//netolo.gy/fub"</string>
    <string name="_0">0</string>
    <string name="_o0">0</string>
    <string name="post_text"> Post text</string>
    <string name="menu_remove"> Remove</string>
    <string name="menu_edit"> Edit </string>
    <string name="likes"> Like</string>
    <string name="cancelButton">TODO</string>
    <string name="edit">Edit Message </string>
    <string name="todo">TODO</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">error_empty_content</string >
    <string name="save"> save </string>
    <string name="chooser_edit_post"> chooser_edit_post</string>


</resources>